unpackaged/main/default/objects/sked_Role_Time_Detail__c/fields/sked_Breakdown_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Breakdown_Time__c</fullName>
    <label>Breakdown Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>