unpackaged/main/default/objects/sked_Role_Time_Detail__c/fields/sked_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Role Time Details</relationshipLabel>
    <relationshipName>sked_Role_Time_Details</relationshipName>
    <type>Lookup</type>
</CustomField>