unpackaged/main/default/objects/sked_Role_Time_Detail__c/fields/sked_Exclude_Travel_Time_for_Roles__c.field-meta.xml
<CustomField>
    <fullName>sked_Exclude_Travel_Time_for_Roles__c</fullName>
    <label>Exclude Travel Time for Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Resource_Roles</valueSetName>
    </valueSet>
</CustomField>