unpackaged/main/default/objects/sked_Role_Time_Detail__c/fields/sked_Mobile_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Mobile_Type__c</fullName>
    <label>Mobile Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked_Drive_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
            <value>
                <fullName>Inside/Outside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>