unpackaged/main/default/objects/sked_Role_Time_Detail__c/validationRules/CollectionOperantionRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionOperantionRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( sked_Type__c , &#39;Collection Operation&#39; ) &amp;&amp;  ISNULL( sked_Collection_Operation__c )</errorConditionFormula>
    <errorMessage>Collection Operation is required.</errorMessage>
</ValidationRule>