unpackaged/main/default/objects/sked_Role_Time_Detail__c/validationRules/CollectionOperationMustBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionOperationMustBeBlank</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( sked_Type__c , &#39;Global&#39; ) &amp;&amp; !ISBLANK( sked_Collection_Operation__c )</errorConditionFormula>
    <errorMessage>Collection Operation must be blank</errorMessage>
</ValidationRule>