unpackaged/main/default/objects/sked_Role_Time_Detail__c/validationRules/CollectionOperationRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionOperationRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( sked_Type__c , &#39;Collection Operation&#39; ) &amp;&amp;  ISBLANK( sked_Collection_Operation__c )</errorConditionFormula>
    <errorMessage>Collection Operation is required.</errorMessage>
</ValidationRule>