unpackaged/main/default/objects/sked_Role_Time_Detail__c/listViews/Global.listView-meta.xml
<ListView>
    <fullName>Global</fullName>
    <columns>NAME</columns>
    <columns>sked_Effective_Start_Date__c</columns>
    <columns>sked_Effective_End_Date__c</columns>
    <columns>sked_Days_of_Week__c</columns>
    <columns>sked_Resource_Role_Group__c</columns>
    <columns>sked_Lead_Time__c</columns>
    <columns>sked_Setup_Time__c</columns>
    <columns>sked_Breakdown_Time__c</columns>
    <columns>sked_Wrap_up_Time__c</columns>
    <columns>sked_Type__c</columns>
    <columns>sked_Drive_Type__c</columns>
    <columns>sked_Mobile_Type__c</columns>
    <columns>sked_Fixed_Site_Operation_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Type__c</field>
        <operation>equals</operation>
        <value>Global</value>
    </filters>
    <label>Global</label>
</ListView>